--- a/HerePlatformComponents/Maps/DomMarkerComponent.razor
+++ b/HerePlatformComponents/Maps/DomMarkerComponent.razor
@@ -1,5 +1,5 @@
 @namespace HerePlatformComponents.Maps
-@inherits ComponentBase
+@inherits MapObjectComponentBase
 
 @if (ChildContent is not null)
 {
