--- a/HerePlatformComponents/Maps/CircleComponent.razor
+++ b/HerePlatformComponents/Maps/CircleComponent.razor
@@ -1,3 +1,3 @@
 @namespace HerePlatformComponents.Maps
-@inherits ComponentBase
+@inherits MapObjectComponentBase
 @* Circle component - no visual DOM element needed *@
