--- a/HerePlatformComponents/Maps/PolygonComponent.razor
+++ b/HerePlatformComponents/Maps/PolygonComponent.razor
@@ -1,3 +1,3 @@
 @namespace HerePlatformComponents.Maps
-@inherits ComponentBase
+@inherits MapObjectComponentBase
 @* Polygon component - no visual DOM element needed *@
