--- a/HerePlatformComponents/Maps/RectComponent.razor
+++ b/HerePlatformComponents/Maps/RectComponent.razor
@@ -1,3 +1,3 @@
 @namespace HerePlatformComponents.Maps
-@inherits ComponentBase
+@inherits MapObjectComponentBase
 @* Rect component - no visual DOM element needed *@
